Changes

SVN
===
- stroke order corrections
- fix stroke order calculation for scheme ⿷ that affects characters with
  radical 匚
- fix reading converters not using dbconnector of ReadingFactory
- added BIG5HKSCS character domain for zh-HK
- added JISX0208 and JISX0208_0213 character domains for ja

0.2 release
===========
- initial stable release